--- a/src/components/TabCtrl/index.scss
+++ b/src/components/TabCtrl/index.scss
@@ -7,6 +7,7 @@ $tab-height: 2.5rem;
   justify-content: space-around;
   align-items: center;
   user-select: none;
+  font-size: 1.2rem;
 }
 
 .tab-item {
