--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "index";
+
 .App {
   height: 100%;
   text-align: center;
@@ -15,14 +17,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: $bg-color;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: $font-color;
 }
 
 .App-link {
@@ -46,11 +48,16 @@
 }
 
 .tab-view {
+  max-height: calc(100% - #{$tab-height});
   flex: 1;
   display: flex;
   flex-direction: column;
-}
 
-.page-view {
-  flex: 1;
+  & > *:last-child {
+    max-height: calc(100% - #{$nav-height});
+    flex: 1;
+    overflow: auto;
+    background-color: $bg-color;
+    color: $font-color;
+  }
 }
