--- a/src/components/NavBar/index.scss
+++ b/src/components/NavBar/index.scss
@@ -1,4 +1,4 @@
-$nav-height: 2.5rem;
+@import "../../index";
 
 .nav-bar {
   width: 100%;
@@ -6,4 +6,7 @@ $nav-height: 2.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: $nav-bg-color;
+  color: $font-color;
+  user-select: none;
 }
