--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,10 @@
+$tab-height: 2.5rem;
+$nav-height: 2.5rem;
+$bg-color: #282c34;
+$font-color: white;
+$tab-bg-color: #1f2428;
+$nav-bg-color: #1f2428;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
